doc/logfile.txt
Class documentation
<---- javadoc command: ---->
D:\Greenfoot\jdk\bin\javadoc.exe
-author
-version
-nodeprecated
-protected
-Xdoclint:none
-noindex
-notree
-nohelp
-nonavbar
-source
11
-classpath
D:\Greenfoot\lib\extensions\greenfoot.jar;D:\Greenfoot\lib\bluejcore.jar;D:\Greenfoot\lib\bluejeditor.jar;D:\Greenfoot\lib\bluejext.jar;D:\Greenfoot\lib\junit-4.11.jar;D:\Greenfoot\lib\hamcrest-core-1.3.jar;D:\Greenfoot\lib\bluej.jar;D:\Greenfoot\lib\classgraph-4.2.6.jar;D:\Greenfoot\lib\diffutils-1.2.1.jar;D:\Greenfoot\lib\commons-logging-api-1.1.2.jar;D:\Greenfoot\lib\jl1.0.1.jar;D:\Greenfoot\lib\opencsv-2.3.jar;D:\Greenfoot\lib\xom-1.2.9.jar;D:\Greenfoot\lib\lang-stride.jar;D:\Greenfoot\lib\nsmenufx-2.1.4.jar;D:\Greenfoot\lib\richtextfx-fat-0.9.0.jar;D:\Greenfoot\lib\guava-17.0.jar;D:\Greenfoot\lib\httpclient-4.1.1.jar;D:\Greenfoot\lib\httpcore-4.1.jar;D:\Greenfoot\lib\httpmime-4.1.1.jar;D:\Greenfoot\lib\javafx\lib\javafx.base.jar;D:\Greenfoot\lib\javafx\lib\javafx.controls.jar;D:\Greenfoot\lib\javafx\lib\javafx.fxml.jar;D:\Greenfoot\lib\javafx\lib\javafx.graphics.jar;D:\Greenfoot\lib\javafx\lib\javafx.media.jar;D:\Greenfoot\lib\javafx\lib\javafx.properties.jar;D:\Greenfoot\lib\javafx\lib\javafx.swing.jar;D:\Greenfoot\lib\javafx\lib\javafx.web.jar;C:\Users\PC\Desktop\Bomberman
-d
C:\Users\PC\Desktop\Bomberman\doc
-encoding
UTF-8
-charset
UTF-8
C:\Users\PC\Desktop\Bomberman\Cronometro.java
<---- end of javadoc command ---->
Loading source file C:\Users\PC\Desktop\Bomberman\Cronometro.java...
C:\Users\PC\Desktop\Bomberman\Cronometro.java:16: error: not a statement
        relo
        ^
C:\Users\PC\Desktop\Bomberman\Cronometro.java:16: error: ';' expected
        relo
            ^
2 errors
